2026-01-07  Karl Berry  <karl@freefriends.org>

	* configure.ac,
	* xbb.c (show_version),
	* dvipdfmx.c (show_version): copyright 2026, version 260107.

2025-04-13  Akira Kakuto  <kakuto@jcom.zaq.ne.jp>

	* dvipdfmx.c: Reinstate an option -o - to send output to
	standard output. This option has been disabled unintentionally
	for a long time.

2025-04-10  Karl Berry  <karl@freefriends.org>

	* configure.ac: version 20250410.

2025-04-09  Karl Berry  <karl@freefriends.org>

	* pdfobj.c (pdf_get_object): fix possible seg fault in
	object stream parsing. Report and patch from Shuqiao Zhang:
	https://tug.org/pipermail/tex-live/2025-April/051444.html

	* xdvipdfm-pdf.test: new test, for this (pdfobj) and the page
	Group (pdfgroup) fix from Clerk Ma.
	* Makefile.am (tests): add it.
	* tests/xdvipdfm-pdfobj.xdv,
	* tests/xdvipdfm-pdfgroup.dvi: new test input files.
	* tests/rpki-ecosystem.drawio.pdf,
	* tests/xdvipdfm-pdfgroup-0318.pdf: inclusion files for the tests.

2025-03-17  Clerk Ma  <clerkma@gmail.com>

	* epdf.c (pdf_include_page): check for the page Group being NULL
	before dereferencing it. (r74687)

2025-03-17  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* vf.c: Store combining characters in vitual fonts with indices
	and save memories to fix issue reported by gbb 60166.
	https://okumuralab.org/tex/mod/forum/discuss.php?d=3903
	* configure.ac: version 20250317.

2025-03-14  Max Chernoff  <tex@maxchernoff.ca>

	* pdffont.c: Switch to using only A-Z in the tag since numerical
	digits are invalid per the PDF spec. Thanks to Yukimasa Morimi,
	https://tug.org/pipermail/dvipdfmx/2025-March/000370.html

2025-03-13  Max Chernoff  <tex@maxchernoff.ca>

	* dvipdfmx.c, dvipdfmx.h, pdffont.c: Use deterministic font names.
	Report from Paulo Ney de Souza,
	https://tug.org/pipermail/dvipdfmx/2025-March/000353.html

2025-03-07  Karl Berry  <karl@tug.org>

	* TL'25 release.

2025-02-22  Karl Berry  <karl@freefriends.org>

	* dvipdfmx-upjf3.test,