@@ -119,6 +119,21 @@ pst_new_obj (pst_type type, void *data)
   obj->type = type;
   obj->data = data;
 
+  switch (obj->type) {
+  case PST_TYPE_BOOLEAN:
+  case PST_TYPE_INTEGER:
+  case PST_TYPE_REAL:
+  case PST_TYPE_NAME:
+  case PST_TYPE_STRING:
+  case PST_TYPE_NULL:
+  case PST_TYPE_MARK:
+  case PST_TYPE_UNKNOWN:
+    if (data == NULL)
+      ERROR("NULL pointer data for object type: %d", obj->type);
+    break;
+  default:
+    ERROR("Unrecognized object type: %d", obj->type);
+  }
   return obj;
 }
 
